# FocusRead

./: App.tsx  cookies.txt  index.html  main.py  metadata.json  modal_app.py  package-lock.json  package.json  pyproject.toml  types.ts
backend/: README.md  ai_client.py  auth_utils.py  database.py  db_models.py  focusread.db  main.py  models.py  openapi.yaml  pyproject.toml
backend/routers/: ai.py  auth.py  leaderboard.py  settings.py  stories.py  upload.py
backend/tests/: test_api.py
components/: ChatInterface.tsx  FileUpload.tsx
frontend/: App.tsx  README.md  api.ts  index.html  index.tsx  package-lock.json  types.ts  vite.config.ts
frontend/components/: AuthModal.tsx  FileUpload.tsx  LeaderboardModal.tsx  PageSelector.tsx  QuizCard.tsx  TableOfContents.tsx
frontend/services/: geminiService.ts
services/: geminiService.ts
